--- a/frontend_assignment/styles/globals.css
+++ b/frontend_assignment/styles/globals.css
@@ -1,25 +1,29 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
-    padding: 0;
-    margin: 0;
-    background-color: #1F3D5A;
-    color: white;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-        Helvetica Neue, sans-serif;
+  padding: 0;
+  margin: 0;
+  background-color: #1f3d5a;
+  color: white;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-    color: inherit;
-    color: #7FB3F1;
-    text-decoration: none;
+  color: inherit;
+  color: #7fb3f1;
+  text-decoration: none;
 }
 
 a:hover,
 a:focus,
 a:active {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
